Fix overflowing

--- a/src/app/home/about/about.component.scss
+++ b/src/app/home/about/about.component.scss
@@ -6,12 +6,6 @@
     display: block;
 }
 
-.container {
-    margin-bottom: 0;
-    margin-top: 0;
-    padding: 100px 0;
-}
-
 p {
     font-size: 1.8em;
 }
