--- a/src/app/home/splash/splash.component.scss
+++ b/src/app/home/splash/splash.component.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'media-queries';
 
 :host {
     display: block;
@@ -58,4 +59,10 @@ app-hero-image {
     height: 100%;
     justify-content: space-between;
     width: 100%;
+}
+
+@include respond-below(sm) {
+    .logo {
+        width: 80%;
+    }
 }
